# rs-search

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  index.html  release-plz.toml  test.js
.github/workflows/: build.yml  cascade.yml  release-plz.yml
site/content/globals/: site.yaml
site/content/pages/: home.yaml
src/: assemble.rs  bm25.rs  context.rs  embed.rs  embed_cache.rs  eval.rs  explain.rs  fusion.rs  git.rs  ignore.rs  lib.rs  main.rs  mcp.rs  mtime_cache.rs  pdf.rs  scanner.rs  tokenize.rs
