[package]
name = "rs-search"
version = "0.1.0"
edition = "2021"

[lib]
name = "rs_search"
path = "src/lib.rs"

[[bin]]
name = "rs-search"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde_json = "1"
regex = "1"
candle-core = "0.10"
candle-nn = "0.10"
candle-transformers = "0.10"
tokenizers = { version = "0.22", default-features = false }
pdf-extract = "0.9"
